Fix: Implement hardened port cleanup to resolve EADDRINUSE error - Add sudo-based cross-user process detection and cleanup - Stop systemd services that may be holding port 8080 - Use comprehensive port detection: sudo ss, sudo lsof, sudo fuser - Implement verification loop to ensure port is actually free - Add systemd service file for optional robust deployment - Update both bin/deploy.sh and GitHub Actions workflow - Eliminate race conditions with proper port release verification

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -223,70 +223,62 @@ jobs:
               echo '[GitHub Actions] pgrep command not available, skipping process cleanup'
             fi
             
-            # Comprehensive port 8080 cleanup  
-            echo '[GitHub Actions] Comprehensive port 8080 cleanup'
-            set +e  # Disable strict error handling for cleanup
-            
-            # First, check what's using port 8080
-            if command -v lsof >/dev/null 2>&1; then
-              echo '[GitHub Actions] Checking processes using port 8080:'
-              lsof -i:8080 2>/dev/null && echo '[GitHub Actions] Found processes above' || echo '[GitHub Actions] No processes found using lsof'
-              
-              # Get PIDs using port 8080
-              PORT_PIDS=\$(lsof -ti:8080 2>/dev/null)
-              if [ -n \"\$PORT_PIDS\" ]; then
-                echo '[GitHub Actions] Killing processes on port 8080: '\$PORT_PIDS
-                # Kill each PID
-                echo \"\$PORT_PIDS\" | while read -r pid; do
-                  if [ -n \"\$pid\" ]; then
-                    echo '[GitHub Actions] Killing PID: '\$pid
-                    kill -9 \"\$pid\" 2>/dev/null || echo '[GitHub Actions] Could not kill '\$pid
-                  fi
-                done
-                sleep 3
-              fi
+            # --- begin hardened 8080 cleanup ---
+            echo '[GitHub Actions] Systemd check for lingering service on 8080'
+            if command -v systemctl >/dev/null 2>&1; then
+              # Stop common unit names quietly if they exist
+              for svc in eassist-api eassist eassist_api; do
+                if systemctl list-units --type=service --all | grep -q \"^\${svc}.service\"; then
+                  echo '[GitHub Actions] Stopping systemd service: '\${svc}'.service'
+                  sudo systemctl stop \"\${svc}.service\" || true
+                  sudo systemctl disable \"\${svc}.service\" || true
+                fi
+              done
             fi
             
-            # Alternative cleanup using netstat/ss
-            if command -v ss >/dev/null 2>&1; then
-              echo '[GitHub Actions] Using ss to find port 8080 processes:'
-              SS_OUTPUT=\$(ss -tlnp 2>/dev/null | grep :8080)
-              if [ -n \"\$SS_OUTPUT\" ]; then
-                echo '[GitHub Actions] SS output: '\$SS_OUTPUT
-                # Extract PIDs from ss output
-                echo \"\$SS_OUTPUT\" | grep -o 'pid=[0-9]*' | cut -d= -f2 | while read -r pid; do
-                  if [ -n \"\$pid\" ]; then
-                    echo '[GitHub Actions] Killing PID from ss: '\$pid
-                    kill -9 \"\$pid\" 2>/dev/null || echo '[GitHub Actions] Could not kill '\$pid
-                  fi
-                done
-                sleep 2
-              fi
+            echo '[GitHub Actions] Enumerating listeners on 8080 with sudo (cross-user)'
+            # Try ss first (fast), fall back to lsof
+            PIDS_SUDO=\"\$(sudo ss -ltnp 2>/dev/null | awk '/:8080 /{print}' | sed -n 's/.*pid=\\([0-9]\\+\\).*/\\1/p' | tr '\\n' ' ')\"
+            if [ -z \"\$PIDS_SUDO\" ] && command -v lsof >/dev/null 2>&1; then
+              PIDS_SUDO=\"\$(sudo lsof -nP -iTCP:8080 -sTCP:LISTEN -t 2>/dev/null | tr '\\n' ' ')\"
             fi
             
-            # Final aggressive cleanup - kill any process listening on 8080
-            if command -v fuser >/dev/null 2>&1; then
-              echo '[GitHub Actions] Using fuser to kill port 8080 processes'
-              fuser -k 8080/tcp 2>/dev/null || echo '[GitHub Actions] fuser found no processes'
+            if [ -n \"\$PIDS_SUDO\" ]; then
+              echo '[GitHub Actions] Killing PIDs listening on 8080: '\$PIDS_SUDO
+              for pid in \$PIDS_SUDO; do
+                sudo kill -TERM \"\$pid\" 2>/dev/null || true
+              done
               sleep 2
+              # Force-kill if still alive
+              for pid in \$PIDS_SUDO; do
+                if sudo kill -0 \"\$pid\" 2>/dev/null; then
+                  echo '[GitHub Actions] Force killing PID: '\$pid
+                  sudo kill -9 \"\$pid\" 2>/dev/null || true
+                fi
+              done
             fi
             
-            # Wait and verify port is free
-            sleep 3
+            echo '[GitHub Actions] Using fuser as last resort'
+            sudo fuser -k 8080/tcp 2>/dev/null || echo '[GitHub Actions] fuser found no processes'
+            sleep 2
+            
+            # Wait loop until 8080 is free
             echo '[GitHub Actions] Verifying port 8080 is free'
-            if command -v lsof >/dev/null 2>&1; then
-              REMAINING=\$(lsof -ti:8080 2>/dev/null)
-              if [ -n \"\$REMAINING\" ]; then
-                echo '[GitHub Actions] WARNING: Processes still using port 8080: '\$REMAINING
-                echo '[GitHub Actions] Final emergency cleanup...'
-                echo \"\$REMAINING\" | while read -r pid; do
-                  [ -n \"\$pid\" ] && kill -9 \"\$pid\" 2>/dev/null
-                done
-                sleep 3
+            for i in \$(seq 1 20); do
+              if sudo ss -ltn 2>/dev/null | grep -q ':8080 '; then
+                echo '[GitHub Actions] Port still busy, retry '\$i'/20...'
+                sleep 1
               else
                 echo '[GitHub Actions] Port 8080 is now free'
+                break
               fi
-            fi
+              if [ \"\$i\" -eq 20 ]; then
+                echo '[GitHub Actions] ERROR: Port 8080 did not free up'
+                sudo ss -ltnp | grep ':8080' || true
+                exit 1
+              fi
+            done
+            # --- end hardened 8080 cleanup ---
             
             set -euo pipefail  # Re-enable strict error handling
             
